# dsnd-recommendation-systems-project

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml  without_uv.yml
notebooks/: Recommendations_with_IBM.html  Recommendations_with_IBM.ipynb  project_tests.py
tests/: test_environment.py
